--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -33,6 +33,8 @@
         console.log(project);
         var releaseStartDate = release.get('ReleaseStartDate');
         var releaseStartDateISO = Rally.util.DateTime.toIsoString(releaseStartDate,true);
+        var releaseDate = release.get('ReleaseDate');
+        var releaseDateISO = Rally.util.DateTime.toIsoString(releaseDate,true);
         
         var myStore = Ext.create('Rally.data.wsapi.Store',{
             model: 'Defect',
@@ -43,6 +45,11 @@
                         property : 'CreationDate',
                         operator : '>=',
                         value : releaseStartDateISO
+                    },
+                    {
+                        property : 'CreationDate',
+                        operator : '<=',
+                        value : releaseDateISO
                     },
                     {
                         property : 'Project',
