--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Defects Created After Start of Release</title>
+    <title>Defects created during Release</title>
 
     <script type="text/javascript" src="/apps/2.0rc3/sdk.js"></script>
 
@@ -29,8 +29,6 @@
     _getData: function(release){
         var project = this.getContext().getProject();
         var projectRef = project._ref;
-        this._projectOid = project.ObjectID;
-        console.log(project);
         var releaseStartDate = release.get('ReleaseStartDate');
         var releaseStartDateISO = Rally.util.DateTime.toIsoString(releaseStartDate,true);
         var releaseDate = release.get('ReleaseDate');
@@ -77,7 +75,7 @@
     _createGrid: function(myStore){
         var that = this;
    	this._myGrid = Ext.create('Ext.grid.Panel', {
-            title: 'Defects created after the start of Release',
+            title: 'Defects created during Release',
             store: myStore,
             columns: [
                 {text: 'Name', dataIndex: 'Name', flex: 1,
@@ -96,7 +94,7 @@
 
 
             Rally.launchApp('CustomApp', {
-                name:"Defects Created After Start of Release",
+                name:"Defects created during Release",
 	            parentRepos:""
             });
 
